<resources>
    <string name="app_name">mCerebrum Demo App</string>
    <string name="app_title">MD2K DataKit Demo App</string>
    <string name="connect_button">Connect</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="register_button">Register</string>
    <string name="unregister_button">Unregister</string>
    <string name="insert_button">Insert</string>
    <string name="hfSwitchOn">High Frequency Insert On</string>
    <string name="hfSwitchOff">High Frequency Insert Off</string>
    <string name="inserting">Inserting data&#8230;</string>
    <string name="subscribe_button">Subscribe</string>
    <string name="unsubscribe_button">Unsubscribe</string>
    <string name="query_button">Query</string>
    <string name="sample_button">Sample</string>
    <string name="dataKitConnected">DataKit connected</string>
    <string name="dataKitDisconnected">DataKit disconnected</string>
    <string name="errorNotConnected">DataKit is not connected</string>
    <string name="dataSourceUnregistered">DataSource unregistered</string>
    <string name="errorNotRegistered">DataSource not registered</string>
    <string name="dataSourceSubscribed">DataSource subscribed</string>
    <string name="dataSourceUnsubscribed">Datasource unsubscribed</string>
</resources>
