<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.md2k.demoapp.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="329dp"
        android:layout_height="38dp"
        android:fontFamily="sans-serif"
        android:hint="@string/app_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:hint="@string/connect_button"
        android:onClick="connectButton"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.232" />

    <Button
        android:id="@+id/button2"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:hint="@string/register_button"
        android:onClick="registerButton"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.232" />

    <Button
        android:id="@+id/button3"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:hint="@string/insert_button"
        android:onClick="insertButton"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.215" />

    <Button
        android:id="@+id/button4"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:hint="@string/subscribe_button"
        android:onClick="subscribeButton"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.215" />

    <Button
        android:id="@+id/button5"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:hint="@string/query_button"
        android:onClick="queryButton"
        app:layout_constraintBottom_toTopOf="@+id/outputTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/outputTextView"
        android:layout_width="328dp"
        android:layout_height="34dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />
</android.support.constraint.ConstraintLayout>
